[package]
name = "ascii-osd-hud"
description = "Ascii based OSD HUD implemention"
version = "0.1.5"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-map = {version = "0.6", default-features = false}
heapless = "0.6"
micromath = "2.0"

[dev-dependencies]
ascii = "1.0"
